web/themes/custom/union_marketing/scss/layout/_default.scss
:root {
  --gutter-width: 24px;
  --content-width: 24fr;
  --breakpoint: xs;

  @include breakpoint(sm) {
    --breakpoint: sm;
  }

  @include breakpoint(md) {
    --breakpoint: md;
  }

  @include breakpoint(lg) {
    --breakpoint: lg;
  }
}

body {
  margin: 0 auto;
  overflow-x: hidden; // Use of the full-width() mixin causes a tiny horizontal scrollbar.
}

.layout-container {
  width: 100%;
  max-width: 1360px;
  margin: 0 auto;
  display: grid;
  grid-row-gap: 0;
  grid-column-gap: 0;
  grid-template-rows: [header] auto [body] auto [content-bottom] auto [footer] auto;
  grid-template-columns: [left-gutter] var(--gutter-width) [content] var(--content-width) [right-gutter] var(--gutter-width);

  @include breakpoint(md) {
    --content-width: 44fr;
    justify-items: stretch;
  }

  @include breakpoint(xl) {
    grid-template-columns: [content] auto;
  }

  &--sidebar-right {
    @include breakpoint(md) {
      grid-column-gap: 2rem;
      grid-template-columns: [left-gutter] 2fr [content] 9fr [sidebar] 3fr [right-gutter] 2fr;
      justify-items: stretch;
    }
  }
}

.layout__region--first,
.layout__region--second {
  display: grid;
  grid-gap: var(--cu-vr2) var(--cu-grid-column-gap);

  .cu-section--gapless & {
    grid-gap: 0;
  }
}

.region-content {
  margin-bottom: var(--cu-vr3);
}


header {
  grid-row: header;
  grid-column: content;
}

header.cu-header {
  justify-content: flex-end;
}

main {
  grid-row: body;
  grid-column: content;
}

aside.layout-sidebar-first {
  grid-row: content-bottom;
  grid-column: content;

  @include breakpoint(md) {
    grid-row: body;
    grid-column: sidebar;
  }
}

footer {
  grid-row: footer;
  grid-column: content;
}

hr.pad {
  border: none;
  margin: 2em 0 0;
}

.layout-banner {
  margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr1));

  // Remove the bottom margin on course nodes.
  .node--course & {
    margin-bottom: 0;
  }
}

.cu-component {
  margin: 0 0 var(--cu-component-margin-bottom, var(--cu-vr2)) 0;

  @include breakpoint(md) {
    margin: 0 0 var(--cu-component-margin-bottom, var(--cu-vr3));
  }
}

.cu-section__content .cu-component:last-child {
  margin-bottom: 0;
}

.cu-component .cu-component,
.cu-layout--twocol .cu-component {
  margin: 0;
}

.cu-composite-heading__body .cu-component {
  margin: 0;
}

// Pull some components into the grid gutter on smaller screens.
.cu-component.cu-component--deck,
.cu-component.cu-card--panel,
.cu-component--topic-list,
.cu-component--cinematic,
.cu-component--popout {
  margin-left: calc(var(--gutter-width) * -1);
  margin-right: calc(var(--gutter-width) * -1);

  @include breakpoint(md) {
    margin-left: 0;
    margin-right: 0;
  }
}

// Card decks with only two cards get margins to make the cards the size they
// would be in a three card deck.
.cu-component--deck.cu-grid--2col:not(.cu-grid--gapless) {
  @include breakpoint(md) {
    margin-left: auto;
    margin-right: auto;
    max-width: 66%;
  }
}

.node--view-mode-alt .block-extra-field-block--node--page--extra-field-ilr-section-navigation {
  margin-bottom: var(--cu-vr1);

  .cu-page-nav__list {
    // @todo Fix this in the page nav component.
    row-gap: var(--cu-vr-2);

    .cu-heading {
      --cu-font-size: var(--cu-ms-1);
    }
  }
}

